--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -9,6 +10,7 @@
 <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
+
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -25,9 +27,9 @@
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://github.com/login/oauth/authorize?client_id=d6c37b3d582b160e7a25&redirect_uri=http://localhost:9999/callback&scope=user&state=1">登录</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我 <span class="caret"></span></a>
+        <li class="dropdown" th:if="${session.user != null}">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+          aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}">我 <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">个人中心</a></li>
             <li><a href="#">消息</a></li>
@@ -36,6 +38,9 @@
             <li><a href="#">退出登录</a></li>
           </ul>
         </li>
+         <li th:if="${session.user == null}">
+         	<a href="https://github.com/login/oauth/authorize?client_id=d6c37b3d582b160e7a25&redirect_uri=http://localhost:9999/callback&scope=user&state=1">登录</a>
+         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
