--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
 			  </div>
 			  <div class="media-body">
 			    <h4 class="media-heading" >
-			    	<a th:href="@{'question/'+${question.id}}" th:text="${question.title}">
+			    	<a th:href="@{'question/'+${question.id}}" th:text="${question.title}"></a>
 			    </h4>
 			    <span th:text="${question.description}"></span><br>
 				  <span class="text-desc">
@@ -50,7 +50,7 @@
 			    </li>
 			    
 			    <li th:each="page : ${pagination.pages}" th:class="${pagination.page==page}?'active' : ''">
-			   	 <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+			   	 <a th:if="${page} ne 0" th:href="@{/(page=${page})}" th:text="${page}"></a>
 			    </li>
 			    
 			    <li th:if="${pagination.showNext}">
