--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -34,7 +34,7 @@
 		            <li><a href="#">消息</a></li>
 		            <li><a href="https://vip.qq.com/">会员中心</a></li>
 		            <li role="separator" class="divider"></li>
-		            <li><a href="#">退出登录</a></li>
+		            <li><a href="/logout">退出登录</a></li>
 		          </ul>
 		        </li>
 		         <li th:if="${session.user == null}">
