--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -27,7 +27,7 @@
 			</div>
     		<div class="form-group">
 			    <label for="description">问题补充:</label>
-			    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
+			    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10" style="resize: none;"></textarea>
 			</div>
 			<div class="form-group">
 			    <label for="tag">添加标签：</label>
